export enum StatusAgenda {
  DISPONIVEL = 'disponivel',
  OCUPADO = 'ocupado',
}
